@@ -1,5 +1,12 @@
 2006-11-12  Zdenek Dvorak <dvorakz@suse.cz>
 
+	* tree-flow.h (name_mappings_registered_p): Declare.
+	* tree-into-ssa.c (name_mappings_registered_p): New function.
+	* tree-cfg.c (tree_can_merge_blocks_p): Check
+	name_mappings_registered_p instead of need_ssa_update_p.
+
+2006-11-12  Zdenek Dvorak <dvorakz@suse.cz>
+
 	* tree-ssa-loop.c (tree_vectorize): Return the result of
 	vectorize_loops.
 	* tree-vectorizer.c (vectorize_loops): Return TODO_cleanup_cfg
